jena-shex/src/test/files/spec/negativeSyntax/prefix-no-COLON.shex
# PREFIX without COLON
# source: turtle-syntax-bad-prefix-05.ttl
PREFIX ex <http://a.example/>
